# Chrun_prediction

./: .env  ABSTRACT.md  README.html  README.md  app.py  auth.py  churn_prediction.py  churn_predictions.db  data_visualizations.py  database.py  export_utils.py  ollama_integration.py  prediction_history.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml  style.css
attached_assets/: Pasted--Customer-Churn-Prediction-Application-Developer-Developed-by-S-Tamilselvan-Project-Overvi-1745125244841.txt  Pasted-ypeError-Could-not-convert-string-NoNoYesNoYesYesNoNoYesNoYesNoNoYesYesNoNoNoYesNoYesNoYesNoNoNoYe-1745123343773.txt
sample_data/: generate_telecom_data.py  telecom_customer_churn.csv
